<resources>
    <string name="app_name" translatable="false">USTH Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="mon" translatable="false">Thứ 2</string>
    <string name="tues" translatable="false">Thứ 3</string>
    <string name="wed" translatable="false">Thư 4</string>
    <string name="thus" translatable="false">Thứ 5</string>
    <string name="fri" translatable="false">Thứ 6</string>
    <string name="sat" translatable="false">Thứ 7</string>
    <string name="sun" translatable="false">Chủ Nhật</string>
    <string name="par" translatable="false">Có mây</string>
    <string name="sunny" translatable="false">Có nắng</string>
    <string name="cloudy" translatable="false">Nhiều Mây</string>
    <string name="rain" translatable="false">Mưa</string>
    <string name="raincloudy" translatable="false">Mưa Lớn</string>
    <string name="snowy">Có tuyết</string>
    <string name="large_text">Large Text</string>
    <string name="title_activity_homepager_adapter">HomepagerAdapter</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>